gen/jobs/v3/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-jobs3 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/jobs/v3/lib)
error[E0433]: failed to resolve: unresolved import
    --> gen/jobs/v3/lib/src/lib.rs:5436:37
     |
5436 |             job_view: Option<crate::jobs::params::ListJobView>,
     |                                     ^^^^
     |                                     |
     |                                     unresolved import
     |                                     help: a similar path exists: `crate::projects::jobs`

error[E0433]: failed to resolve: unresolved import
    --> gen/jobs/v3/lib/src/lib.rs:5458:54
     |
5458 |             pub fn job_view(&mut self, value: crate::jobs::params::ListJobView) -> &mut Self {
     |                                                      ^^^^
     |                                                      |
     |                                                      unresolved import
     |                                                      help: a similar path exists: `crate::projects::jobs`

error[E0423]: expected value, found struct `client_events::ClientEventsActions`
    --> gen/jobs/v3/lib/src/lib.rs:3473:13
     |
3473 |             client_events::ClientEventsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `client_events::ClientEventsActions { /* fields */ }`?

error[E0423]: expected value, found struct `companies::CompaniesActions`
    --> gen/jobs/v3/lib/src/lib.rs:3477:13
     |
3477 |             companies::CompaniesActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `companies::CompaniesActions { /* fields */ }`?

error[E0423]: expected value, found struct `jobs::JobsActions`
    --> gen/jobs/v3/lib/src/lib.rs:3481:13
     |
3481 |             jobs::JobsActions
     |             ^^^^^^^^^^^^^^^^^ did you mean `jobs::JobsActions { /* fields */ }`?

warning: unreachable expression
   --> gen/jobs/v3/lib/src/lib.rs:715:13
    |
715 | /             Ok(match value {
716 | |                 _ => {
717 | |                     return Err(::serde::de::Error::custom(format!(
718 | |                         "invalid enum for #name: {}",
...   |
721 | |                 }
722 | |             })
    | |______________^
    |
    = note: #[warn(unreachable_code)] on by default

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:1373:13
     |
1373 | /             Ok(match value {
1374 | |                 _ => {
1375 | |                     return Err(::serde::de::Error::custom(format!(
1376 | |                         "invalid enum for #name: {}",
...    |
1379 | |                 }
1380 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:1598:13
     |
1598 | /             Ok(match value {
1599 | |                 _ => {
1600 | |                     return Err(::serde::de::Error::custom(format!(
1601 | |                         "invalid enum for #name: {}",
...    |
1604 | |                 }
1605 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:1634:13
     |
1634 | /             Ok(match value {
1635 | |                 _ => {
1636 | |                     return Err(::serde::de::Error::custom(format!(
1637 | |                         "invalid enum for #name: {}",
...    |
1640 | |                 }
1641 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:1670:13
     |
1670 | /             Ok(match value {
1671 | |                 _ => {
1672 | |                     return Err(::serde::de::Error::custom(format!(
1673 | |                         "invalid enum for #name: {}",
...    |
1676 | |                 }
1677 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:1982:13
     |
1982 | /             Ok(match value {
1983 | |                 _ => {
1984 | |                     return Err(::serde::de::Error::custom(format!(
1985 | |                         "invalid enum for #name: {}",
...    |
1988 | |                 }
1989 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:2175:13
     |
2175 | /             Ok(match value {
2176 | |                 _ => {
2177 | |                     return Err(::serde::de::Error::custom(format!(
2178 | |                         "invalid enum for #name: {}",
...    |
2181 | |                 }
2182 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:2211:13
     |
2211 | /             Ok(match value {
2212 | |                 _ => {
2213 | |                     return Err(::serde::de::Error::custom(format!(
2214 | |                         "invalid enum for #name: {}",
...    |
2217 | |                 }
2218 | |             })
     | |______________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:3393:17
     |
3393 | /                 Ok(match value {
3394 | |                     _ => {
3395 | |                         return Err(::serde::de::Error::custom(format!(
3396 | |                             "invalid enum for #name: {}",
...    |
3399 | |                     }
3400 | |                 })
     | |__________________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:3429:17
     |
3429 | /                 Ok(match value {
3430 | |                     _ => {
3431 | |                         return Err(::serde::de::Error::custom(format!(
3432 | |                             "invalid enum for #name: {}",
...    |
3435 | |                     }
3436 | |                 })
     | |__________________^

warning: unreachable expression
    --> gen/jobs/v3/lib/src/lib.rs:4716:21
     |
4716 | /                     Ok(match value {
4717 | |                         _ => {
4718 | |                             return Err(::serde::de::Error::custom(format!(
4719 | |                                 "invalid enum for #name: {}",
...    |
4722 | |                         }
4723 | |                     })
     | |______________________^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0423, E0433.
For more information about an error, try `rustc --explain E0423`.
error: Could not compile `google-jobs3`.

To learn more, run the command again with --verbose.
